"$Id$"
Top of CVS tree:

------------------------------------------------------------------------------
gtk/win32/config.h: Add parentheses around arguments of sleep and usleep
  macros.
Andreas Kirschbaum 2004-09-19

common/script.c: warn when script start failure (Linux), patch courtesy Kevin Rudat.
  Check there actually is a parameter to 'script', else that'd crash nicely.
Ryo 2004-08-16

gnome/gnome.c, gtk/gx11.c: Fix improper access to history buffer variable.
Andreas Kirschbaum 2004-05-24

gtk/gx11.c: Comment out printing of size when we receive config event.
gtk/image.c: Remove some superfluos LIL_ENDIAN code that would never
  be used because it was already in an #ifdef LIL_ENDIAN/#else block.
  Fix up freeing of data - need to free the pixel info before freeing
  the surface, don't free the fog pixels since SDL will do that for us.
MSW 2004-05-15

gtk/image.c: Patch from bug list to fix compilation on big endian
  machines.
MSW 2004-05-11

gtk/gx11.c: Fix configure_event() to only allocate new data structures if
  the size of the map area has in fact change.  This fixes a major memory
  leak, as it seems gtk erroneously generates configure events.
gtk/map.c: Clean out some commented out code, clean up the formatting of the
  draw_map function - no actual code change.
MSW 2004-05-08

------------------------------------------------------------------------------
Changes for 1.7.0:

common/client.h: synced client version to 1023.
gtk/win32/config.h: changed version numbers.
gtk/win32/gtkclient.nsi: added scripting documentation. Checks for GTK.
gtk/win32/Win32Changes.txt: updated.
Ryo 2004-04-25

gtk/win32/porting.c: tweaked SDL's sound support to use panning information.
   Added missing header files.
Ryo 2004-04-11

gtk/win32/porting.c: implemented basic sound with PlaySound.
gtk/win32/gtkclient.dsp: added winmm.lib to link list.
Ryo 2004-04-11

This is related to Win32 scripting. It now works correctly thanks